@@ -25,6 +25,11 @@
 - P4A::raiseXMLresponse() method is now public
 - P4A_Error_Handler was rewritten to be used in ajax calls too
 - check_configuration library now also checks for PHP version
+- P4A::executeExternalCommands() method was added
+- all tasks dealing with external systems where moved from P4A::main() to P4A::executeExternalCommands()
+- session_start() instruction was moved from P4A::singleton() method to p4a.php main inclusion file
+- P4A::executeExternalCommands() is executed just after the session_start(), in the p4a.php main inclusion file
+- P4A_Object::destroy() now checks if every object to destroy is a P4A_Object before calling destroy() recursively on it
 
 2.99.3
 - P4A_Toolbars code was refactored using P4A chainability
